fixing colors, add border and striping to ease readability

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   padding: 25px;
   margin-top: 25px;
   margin-bottom: 25px;
-  background-color: #FAFAFA;
+  background-color: #FEFEFE;
   box-shadow: 0px 0px 5px black;
 }
 
